jellyseer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-dns"
spec:
  tls:
    - hosts:
        - jellyseerr.ozeliurs.com
      secretName: jellyseerr-tls
  rules:
    - host: jellyseerr.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
